feat: fix tests! Pass session maker instead of session to route handlers

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,5 @@ filterwarnings =
     ignore:builtin type SwigPyPacked:DeprecationWarning
     ignore:builtin type SwigPyObject:DeprecationWarning
     ignore:builtin type swigvarlink:DeprecationWarning
-asyncio_default_fixture_loop_scope = session
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
