--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "fastapi-testing"
+name = "my-fastapi"
 version = "0.1.0"
 description = "Add your description here"
 authors = [{ name = "Max" }]
